[package]
name = "ola-lang-abi"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Ola Smart Contract ABI parsing library"
authors = ["yp945@outlook.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["abi", "ola", "olac", ]
documentation = "https://olang.readthedocs.io/"
homepage = "https://github.com/Sin7Y/ola-lang-abi"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
nom = { version = "7.0", default-features = false, features = ["std"] }
regex = { version = "1.5", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
