[package]
name = "ola-lang-abi"
version = "1.0.5"
edition = "2021"
license = "MIT"
description = "Ola Smart Contract ABI parsing library"
authors = ["panos@olavm.org"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["abi", "ola", "olac", ]
documentation = "https://olang.gitbook.io/ola-lang/"
homepage = "https://github.com/Sin7Y/ola-lang-abi"

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
nom = { version = "7.1.3", default-features = false, features = ["std"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
serde-wasm-bindgen = "0.4"
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
wasm-bindgen = "0.2.74"
js-sys = "0.3.59"
# web-sys = "0.3.55"
web-sys = { version = "0.3.55", default-features = false, features = ["Window"] }

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasmbindgen]
# binaryen = "binaryen-version_111-x86_64-macos"
# Add other configuration options here

# Add the following line to disable wasm-opt
# wasm-opt = false
