[package]
name = "ola-lang-abi"
version = "1.0.6"
edition = "2021"
license = "MIT"
description = "Ola Smart Contract ABI parsing library"
authors = ["panos@olavm.org"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["abi", "ola", "olac", ]
documentation = "https://olang.gitbook.io/ola-lang/"
homepage = "https://github.com/Sin7Y/ola-lang-abi"

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
nom = { version = "7.1.3", default-features = false, features = ["std"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
mini-goldilocks = { git = "https://github.com/Sin7Y/mini-goldilocks", branch = "main" }
[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
